--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body {
 <br>
 <center><figure>
     <figcaption>Listen to Music If You Want To!:</figcaption>
-    <audio src="audiocoding/onedirection.mp3" controls></audio>
+    <audio src="onedirection.mp3" controls></audio>
 </figure>
 </center>
 <br>
@@ -156,19 +156,19 @@ img {vertical-align: middle;}
 
 <center><div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="codingpicture/min.jpg" style="width:40%">
+  <img src="min.jpg" style="width:40%">
   <div class="text">Outfit of The Day</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="codingpicture/meen2.jpg" style="width:30%">
+  <img src="meen2.jpg" style="width:30%">
   <div class="text">Selfie</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="codingpicture/yasminisa1.jpg" style="width:30%">
+  <img src="yasminisa1.jpg" style="width:30%">
   <div class="text">My Bestie❤</div>
 </div>
 
