--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ img {vertical-align: middle;}
 
 <center><div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="min.jpg" style="width:40%">
+  <img src="min.JPG" style="width:40%">
   <div class="text">Outfit of The Day</div>
 </div>
 
@@ -168,7 +168,7 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="yasminisa1.jpg" style="width:30%">
+  <img src="yasminisa1.JPG" style="width:30%">
   <div class="text">My Bestie❤</div>
 </div>
 
