--- a/myfamily.html
+++ b/myfamily.html
@@ -60,7 +60,7 @@ body {
 	<table align="center">
 		<tr>
 			<td>
-				<img style="border:5px groove gold;" src="myfather.jpg" width="300" height="350" alt="father" />
+				<img style="border:5px groove gold;" src="myfather.JPG" width="300" height="350" alt="father" />
         <b><center><p>Salehudin Bin Mohamad Sahat</p></center></b>
 			</td>
 			<td>
@@ -74,7 +74,7 @@ body {
 		</tr>
     <br>
     <td>
-      <img style="border:5px groove gold;" src="family.jpg" width="300" height="350" alt="family" />
+      <img style="border:5px groove gold;" src="family.JPG" width="300" height="350" alt="family" />
       <b><center><p>Grandmother and Grandfather</p></center></b>
     </td>
     <td>
@@ -82,7 +82,7 @@ body {
       <b><center><p>My Family during Hari Raya (My Step Siblings)</p></center></b>
     </td>
     <td>
-      <img style="border:5px groove gold;" src="ayden.jpg" width="300" height="350" alt="aidilfitri" />
+      <img style="border:5px groove gold;" src="ayden.JPG" width="300" height="350" alt="aidilfitri" />
       <b><center><p>My First Nephew: Ayden Eusoff</p></center></b>
     </td>
 
