--- a/experience.html
+++ b/experience.html
@@ -61,7 +61,7 @@ body {
   </div>
   <div class="column">
     <div class="content">
-  <center><img src="poster.jpg" alt="yasmin2" style="width:30%"></center>
+  <center><img src="poster.JPG" alt="yasmin2" style="width:30%"></center>
   <center><p><b>PROGRAM THAT I HANDLE AS A PROGRAM DIRECTOR</b></p></center>
   </div>
   <div class="column">
