--- a/education.html
+++ b/education.html
@@ -111,7 +111,7 @@ body {
 <br>
   <tr>
     <td>
-      <img src="upkk.jpg" width="420" height="420" alt="UPKK" />
+      <img src="upkk.JPG" width="420" height="420" alt="UPKK" />
       <b><center><p>My results for UPKK (PENILAIAN UJIAN KELAS KAFA TAHUN 5)</p></center></b>
     </td>
     <br>
